--- a/pepper/overlay/framework-miui-res/res/values-de/strings.xml
+++ b/pepper/overlay/framework-miui-res/res/values-de/strings.xml
@@ -65,7 +65,7 @@ Bitte laden Sie diese App neu.</string>
     <string name="private_num">Private Nummer</string>
     <string name="payphone">Münztelefon</string>
     <string name="callNoAnswerTimeFormat">Klingelt %s mal</string>
-    <string name="date_day">Datum</string>
+    <string name="date_day">E</string>
     <string name="firewall_setting">Firewall</string>
     <string name="keyguard_incorrect_pin_with_retry_count">Sie haben noch %d Versuche</string>
     <string name="caller_info_name_delimiter">Or</string>
