--- a/pepper/overlay/framework-miui-res/res/values-de/strings.xml
+++ b/pepper/overlay/framework-miui-res/res/values-de/strings.xml
@@ -4,8 +4,7 @@
     <string name="reboot_progress">Neustart...</string>
     <string name="resourcebrowser_lable">Ressourcen</string>
     <string name="sdcard_status_changed_dialog_title">SD Karten Status geändert</string>
-    <string name="sdcard_status_changed_dialog_message">Wird beendet.
-Bitte laden Sie diese App neu.</string>
+    <string name="sdcard_status_changed_dialog_message">Wird beendet. Bitte laden Sie diese App neu.</string>
     <string name="resource_transparent_wallpaper">Transparent</string>
     <string name="resource_mute">Stumm</string>
     <string name="resource_default">Standard</string>
@@ -46,15 +45,15 @@ Bitte laden Sie diese App neu.</string>
     <string name="lockscreen_time_bottom_hint">Zum Entsperren nach unten ziehen</string>
     <string name="lockscreen_call_bottom_hint">Zum Telefonieren nach unten ziehen</string>
     <string name="lockscreen_sms_bottom_hint">Zum SMS lesen nach unten ziehen</string>
-    <string name="lock_screen_date">EEEE, d MMMM</string>
+    <string name="lock_screen_date">d. MMMM EEEE</string>
     <string name="lockscreen_unlock_sim_via_puk">Benutze PUK zum Entsperren der SIM-Karte</string>
     <string name="safetylegal_activity_unreachable">Ihr Telefon ist mit keinem Datendienst verbunden. Um diese Informationen jetzt anzuzeigen, rufen Sie %s von einem beliebigen, mit dem Internet verbundenen Computer auf.</string>
     <string name="miui_copyright_title">Urheberrecht</string>
     <string name="miui_user_agreement_title">Nutzungsvereinbarung</string>
     <string name="miui_privacy_policy_title">Zusätzliche Datenschutzbestimmungen</string>
     <string name="user_agreement1">Wenn Sie den Onlineservice von Xiaomi nutzen möchten, lesen Sie bitte</string>
-    <string name="user_agreement2"> die Einverständniserklärung</string>
-    <string name="user_agreement3"> und die </string>
+    <string name="user_agreement2">" die Einverständniserklärung"</string>
+    <string name="user_agreement3">" und die "</string>
     <string name="user_agreement4">Zusätzlichen Datenschutzbestimmungen.</string>
     <string name="user_agreement5">Klicken Sie auf OK, wenn Sie mit dem Inhalt einverstanden sind, klicken Sie auf ABBRECHEN, um zu beenden.</string>
     <string name="sd_not_available">Die SD-Karte ist nicht eingebunden oder nicht verfügbar</string>
@@ -68,12 +67,12 @@ Bitte laden Sie diese App neu.</string>
     <string name="date_day">E</string>
     <string name="firewall_setting">Firewall</string>
     <string name="keyguard_incorrect_pin_with_retry_count">Sie haben noch %d Versuche</string>
-    <string name="caller_info_name_delimiter">Or</string>
+    <string name="caller_info_name_delimiter">oder</string>
     <string name="first_back_long_press_title">Verhalten der Zurück-Taste</string>
-    <string name="first_back_long_press_message">Soll bei einem langen Drücken der Zurück-Taste der aktuelle Prozess beendet werden? 
+    <string name="first_back_long_press_message">"Soll bei einem langen Drücken der Zurück-Taste der aktuelle Prozess beendet werden?
 
-Aktivieren über Einstellungen / Alle Einstellungen / Tasteneinstellungen</string>
-    <string name="force_exit_message">Erfolgreich beendet %1$s</string>
+	Aktivieren über Einstellungen / Alle Einstellungen / Tasteneinstellungen"</string>
+    <string name="force_exit_message">Erfolgreich beendet \"%1$s\"</string>
     <string name="global_action_toggle_privacy_mode">Gast</string>
     <string name="global_action_privacy_mode_on_status">Gastmodus ist aktiviert</string>
     <string name="global_action_privacy_mode_on_toast">Gastmodus ist aktiviert. Daten Anrufe und Kurzmitteilungen werden ausgeblendet und der Launcher kann nicht in den Editier-Modus.</string>
@@ -82,7 +81,7 @@ Aktivieren über Einstellungen / Alle Einstellungen / Tasteneinstellungen</strin
     <string name="delete">Löschen</string>
     <string name="select_all">Alles auswählen</string>
     <string name="reverse_all">Alles löschen</string>
-    <string name="multi_select_title">Ausgewählt %1$s</string>
+    <string name="multi_select_title">Ausgewählt: %1$s</string>
     <string name="sim_account_name">SIM</string>
     <string name="text_pastelist">Zwischenablage</string>
     <string name="select">Auswählen</string>
@@ -108,7 +107,7 @@ Aktivieren über Einstellungen / Alle Einstellungen / Tasteneinstellungen</strin
     <string name="month_of_october">Okt</string>
     <string name="month_of_november">Nov</string>
     <string name="month_of_december">Dez</string>
-    <string name="day_of_month">%d </string>
+    <string name="day_of_month">" %d"</string>
     <string name="group_name_contacts">Kontakte</string>
     <string name="group_name_friends">Freunde</string>
     <string name="group_name_family">Familie</string>
@@ -124,8 +123,8 @@ Aktivieren über Einstellungen / Alle Einstellungen / Tasteneinstellungen</strin
     <string name="perm_tigger_toggle_lab">Aktion von der Statusleiste geändert</string>
     <string name="perm_tigger_toggle_dspt">Erlaube den Anwendungen Änderungen vorzunehmen, welche von der Statusleiste verwaltet werden.</string>
     <string name="perm_use_find_device">Gerät finden</string>
-    <string name="find_device_sim_change_instructions">Ihr Gerät wurde gesperrt. 
-Bitte setzen Sie eine SIM-Karte oder geben Sie Ihr Xiaomi Zugangspasswort ein.</string>
+    <string name="find_device_sim_change_instructions">"Ihr Gerät wurde gesperrt.
+Bitte setzen Sie eine SIM-Karte oder geben Sie Ihr Xiaomi Zugangspasswort ein."</string>
     <string name="check_phone_error_title">Synchronisation Service fehlgeschlagen</string>
     <string name="check_phone_io_error">Netzwerkfehler</string>
     <string name="send_sms_for_sync_title">Synchronisation Service nicht aktiviert</string>
@@ -138,7 +137,7 @@ Bitte setzen Sie eine SIM-Karte oder geben Sie Ihr Xiaomi Zugangspasswort ein.</
     <string name="error_unauthorized">Zu viele Fehler der Authentifizierung. Synchronisation gestoppt.</string>
     <string name="error_forbidden">Ihr Zugang machte Probleme. Synchronisation abgebrochen.</string>
     <string name="error_not_acceptable">Server Fehlfunktion. Synchronisation abgebrochen.</string>
-    <string name="screen_on_proximity_sensor_hint">Abbrechen erzwingen: Drücke "Zurück" und "Lautstärke +" Tasten"</string>
+    <string name="screen_on_proximity_sensor_hint">Abbrechen erzwingen: Drücke Zurück und Lautstärke + Tasten</string>
     <string name="screen_on_proximity_sensor_summary">Nicht den oberen Bildschirmrand bedecken</string>
     <string name="screen_on_proximity_sensor_title">Fehlbedienung vehindert Modus</string>
     <string name="wake_alarm_message">Weckton ausschalten. Wiederholung in %s</string>
@@ -147,8 +146,8 @@ Bitte setzen Sie eine SIM-Karte oder geben Sie Ihr Xiaomi Zugangspasswort ein.</
     <string name="description_downloadtime">Download:</string>
     <string name="permlab_accessNote">Zugriff auf Ihre Notizen</string>
     <string name="permdesc_accessNote">Dies erlaubt der Anwendung ihre Notizen zu lesen und zu verändern, welche in Ihrem Telefon gespeichert sind. Bösartige Programme können dies nutzen, um Ihre Notizen an andere Personen zu schicken oder sie zu löschen.</string>
-    <string name="memory_clear_result">Erfolgreich %1$s Speicher frei gemacht. 
-Aktuell verfügbarer Speicher %2$s.</string>
+    <string name="memory_clear_result">"Erfolgreich %1$s Speicher frei gemacht.
+	Aktuell verfügbarer Speicher %2$s."</string>
     <string name="memory_clear_nothing_result">Aktuell kein belegter Speicher</string>
     <string name="perm_send_push_lab">Sende Push Nachricht</string>
     <string name="perm_send_push_dspt">Erlaube es eine Xiaomi Push Nachricht zu senden</string>
@@ -174,16 +173,16 @@ Aktuell verfügbarer Speicher %2$s.</string>
     <string name="status_bar_toggle_vibrate">Vibration</string>
     <string name="status_bar_toggle_wifi">WLan</string>
     <string name="screen_rotation_freeze_message">Verhindert Bildschirmrotation zum Querformat</string>
-    <string name="screen_button_disabled_message">Untere Bildschirmtasten sind gesperrt. Zum Aktiveren "HOME" und "POWER" Tasten drücken.</string>
+    <string name="screen_button_disabled_message">Untere Bildschirmtasten sind gesperrt. Zum Aktiveren HOME und POWER Tasten drücken.</string>
     <string name="screen_button_enabled_message">Untere Bildschirmtasten sind aktiviert</string>
     <string name="no_vibrate_hint">Entsprechend Ihrer Einstellungen, werden ankommende Gespräche und SMS nicht vibrieren. Auch nicht bei Aktivierung der Vibrationsfunktion.</string>
     <string name="to_vibrate_settings">Vibration Einstellung</string>
     <string name="incoming_call_vibrate_hint">Eingehender Anruf</string>
     <string name="notification_vibrate_hint">Benachrichtigung</string>
     <string name="mms_vibrate_hint">Nachricht</string>
-    <string name="not_all_vibrate_hint">Entsprechend ihrer Einstellung, %1$s vibriert, %2$s vibriert nicht. Dies kann  unter Einstellungen / Töne / Vibration geändert werden</string>
+    <string name="not_all_vibrate_hint">Entsprechend ihrer Einstellung, %1$s vibriert, %2$s vibriert nicht. Dies kann unter Einstellungen / Töne / Vibration geändert werden</string>
     <string name="screen_button_notification_title">Bildschirmtasten sind gesperrt</string>
-    <string name="screen_button_notification_text">Drücke "HOME" und "POWER" Tasten zum Aktivieren</string>
+    <string name="screen_button_notification_text">"Drücken Sie HOME und POWER Tasten zum Aktivieren"</string>
     <string name="perm_payment_lab">Xiaomi Bezahldienst</string>
     <string name="perm_payment_dspt">Erlaube der Anwendung mit Xiaomi Bezahldienst zu bezahlen</string>
     <string name="resource_buy">Kaufen</string>
@@ -206,7 +205,7 @@ Aktuell verfügbarer Speicher %2$s.</string>
     <string name="theme_update_complete_content_fail">, %1$d misslungen</string>
     <string name="resource_get_auth_missing">Das Thema wurde nicht vom offiziellen Markt geladen, bitte laden Sie ein ähnliches Thema vom offiziellen Markt herunter.</string>
     <string name="resource_no_result">Kein ergebnis</string>
-    <string name="status_bar_toggle_drive_mode">Fahrmodus</string>
+    <string name="status_bar_toggle_drive_mode">Automodus</string>
     <string name="status_bar_toggle_auto_brightness">Autom.-Helligkeit</string>
     <string name="status_bar_toggle_ring">Klingel</string>
     <string name="status_bar_toggle_ringtone">Klingelton</string>
@@ -220,9 +219,7 @@ Aktuell verfügbarer Speicher %2$s.</string>
     <string name="resource_get_auth_exceed_max_limit_tips">Das Thema kann nicht auf dem aktuellen Gerät mit ihrem Zugang laufen, welches auf 10 Mobilgeräte pro Jahr beschränkt ist. Bitte benutzen Sie einen anderen Xiaomi Zugang.</string>
     <string name="resource_switch_account">Wechseln</string>
     <string name="find_device_turn_off_flight_mode">Flugzeugmodus aus</string>
-    <string name="find_device_turn_off_flight_mode_instructions">Gerät gesperrt. 
-Bitte schalten Sie den Flugzeugmodus aus.</string>
-    <string name="find_device_sim_change_instructions_no_network">Gerät gesperrt. 
-Bitte legen Sie eine SIM-Karte ein.</string>
+    <string name="find_device_turn_off_flight_mode_instructions">Gerät gesperrt. Bitte schalten Sie den Flugzeugmodus aus.</string>
+    <string name="find_device_sim_change_instructions_no_network">Gerät gesperrt. Bitte legen Sie eine SIM-Karte ein.</string>
     <string name="find_device_check_sim">SIM überprüfen...</string>
 </resources>
