--- a/pepper/overlay/framework-res/res/values-fa/strings.xml
+++ b/pepper/overlay/framework-res/res/values-fa/strings.xml
@@ -101,7 +101,7 @@
     <string name="yesterday">دیروز</string>
     <string name="today">امروز</string>
     <string name="tomorrow">فردا</string>
-     <string name="hour_minute_24" formatted="false">%H:%M</string>
+    <string name="hour_minute_24" formatted="false">%H:%M</string>
     <string name="hour_minute_ampm" formatted="false">%-l:%M %p</string>
     <string name="hour_minute_cap_ampm" formatted="false">%-l:%M %p</string>
     <string name="twelve_hour_time_format">hh:mm a</string>
@@ -194,7 +194,7 @@
     <string name="ClipMmi">شماره تماس گیرنده ورودی</string>
     <string name="ClirMmi">شماره تماس گیرنده خروجی</string>
     <string name="CfMmi">ارجاع تماس</string>
-    <string name="CwMmi">انتظار مکالمه/string>
+    <string name="CwMmi">انتظار مکالمه</string>
     <string name="BaMmi">محدودیت تماس های ورودی</string>
     <string name="PwdMmi">تعویض رمز عبور</string>
     <string name="PinMmi">تغییر رمز سیم کارت</string>
