--- a/miui/src/packages/decompiled_apps/LBESEC_MIUI.apk/res/values-iw/strings.xml
+++ b/miui/src/packages/decompiled_apps/LBESEC_MIUI.apk/res/values-iw/strings.xml
@@ -66,6 +66,14 @@
     <string name="HIPS_Perm_WIFINetwork">WIFI</string>
     <string name="HIPS_Perm_WIFINetwork_Desc">גישה לאינטרנט דרך WIFI</string>
     <string name="HIPS_Perm_WIFINetwork_Hint">%1$s יישומים מורשים לגשת לאינטרנט</string>
+    <string name="HIPS_Perm_Network_UnknownAddr">Unknown address</string>
+    <string name="HIPS_Perm_Network_MobileEvent">Using Mobile network</string>
+    <string name="HIPS_Perm_Network_WIFIEvent">Using Wi-Fi network</string>
+    <string name="HIPS_Perm_Network_Accept">Allow connection from %1$s</string>
+    <string name="HIPS_Perm_Network_Connect">Connect to %1$s</string>
+    <string name="HIPS_Perm_Network_Listen">Listen on port %1$s</string>
+    <string name="HIPS_Perm_Network_Recv">Receive data</string>
+    <string name="HIPS_Perm_Network_Send">Send data</string>
     <string name="HIPS_Perm_SMS">SMS</string>
     <string name="HIPS_Perm_SMS_Desc">גישה לתיבת הדואר הנכנס שלך ב-SMS</string>
     <string name="HIPS_Perm_SMS_Hint">%1$s יישומים מורשים לגשת ל SMS הנכנס שלך</string>
@@ -77,6 +85,7 @@
     <string name="HIPS_Perm_CallLog_Hint">%1$s יישומים מורשים לגשת ליומני הקריאה שלך</string>
     <string name="HIPS_Perm_ROOT">ROOT</string>
     <string name="HIPS_Perm_ROOT_Desc">בקש הרשאת ROOT</string>
+    <string name="HIPS_Perm_ROOT_Desc_Stable">Unavailable in MIUI Stable version</string>
     <string name="HIPS_Perm_ROOT_Hint">%1$s יישומים מאושרים להשיג הרשאת ROOT</string>
     <string name="HIPS_Perm_SendSMS_Recipient">מקבל:</string>
     <string name="HIPS_Perm_SendSMS_Content">תוכן:</string>
@@ -118,6 +127,15 @@
     <string name="HIPS_SecurityPrompt_Remember">זכור את הבחירה שלי</string>
     <string name="HIPS_SecurityPrompt_Accept">אושרו (%d)</string>
     <string name="HIPS_SecurityPrompt_Reject">נחסמו (%d)</string>
+    <string name="HIPS_SecurityPrompt_AcceptRoot">Allow</string>
+    <string name="HIPS_SecurityPrompt_Next">Next</string>
+    <string name="HIPS_SecurityPrompt_ROOT_Caption">Important Warning</string>
+    <string name="HIPS_SecurityPrompt_ROOT_Step1">Do you wish to allow %1$s to get ROOT permission?</string>
+    <string name="HIPS_SecurityPrompt_ROOT_Step2">ROOT permission may cause system instability</string>
+    <string name="HIPS_SecurityPrompt_ROOT_Step3">Your privacy data such as accounts, password and messages might be compromised</string>
+    <string name="HIPS_SecurityPrompt_ROOT_Step4">Permanent hardware damage is also possible</string>
+    <string name="HIPS_SecurityPrompt_ROOT_Step5">Use with caution!</string>
+    <string name="HIPS_SecurityPrompt_ROOT_Step6">Are your sure to allow %1$s to get ROOT permission?</string>
     <string name="Dashboard_Perm">הרשאות</string>
     <string name="Dashboard_App">יישומים</string>
     <string name="Dashboard_Log">רישומים</string>
@@ -127,11 +145,20 @@
     <string name="Dashboard_Perm_SU">נהל הרשאת ROOT</string>
     <string name="Dashboard_Perm_SU_Desc">מפקח על %1$d יישומים בשביל הרשאת רROOT</string>
     <string name="Dashboard_Perm_SU_Disabled">הרשאת ROOT מושבתת</string>
+    <string name="Dashboard_Perm_SU_Disabled_In_Stable">ROOT is not available in Stable MIUI versions</string>
+    <string name="Dashboard_Perm_SU_Disabled_In_Stable_Desc">Grant ROOT permission to 3rd party apps may cause system instability, or loss of personal data, system or hardware damage. Please switch to a development version of MIUI to enable ROOT permissions.</string>
+    <string name="Dashboard_Perm_SU_Disabled_In_Stable_Download">Download MIUI</string>
+    <string name="Dashboard_Perm_SU_Disabled_In_Stable_URL">http://www.miuiandroid.com/community/</string>
     <string name="Dashboard_Perm_HIPS_Switch">פיקוח הרשאות</string>
     <string name="Dashboard_Perm_HIPS">נהל הרשאות יישומים</string>
     <string name="Dashboard_Perm_HIPS_Desc">מפקח על %1$d יישומים עבור אבטחה ופרטיות</string>
     <string name="Dashboard_Perm_HIPS_Desc2">מפקח על %1$d יישומים עבור אבטחה ופרטיות</string>
     <string name="Dashboard_Perm_HIPS_Disabled">מפקח ההרשאות מושבת</string>
+    <string name="Dashboard_Perm_HIPS_Risky">Risky Permissions (%1$d)</string>
+    <string name="Dashboard_Perm_HIPS_Safe">Normal Permissions (%1$d)</string>
+    <string name="Dashboard_Perm_AutoStart_Switch">Autostart Manager</string>
+    <string name="Dashboard_Perm_AutoStart">App Control</string>
+    <string name="Dashboard_Perm_AutoStart_Desc">Enable or disable app autostart feature</string>
     <string name="Dashboard_HIPS_Disable_Title">מפקח ההרשאות</string>
     <string name="Dashboard_HIPS_Disable_Content">"השבתה של זה יגרום ל MIUI להשבית פיקוח על יישומים עם הרשאות וזה יגרום לרמת האבטחה לרדת.
 אתה בטוח שאתה רוצה להשבית את זה?"</string>
@@ -154,7 +181,12 @@
     <string name="Privacy_App_Launch">הפעל</string>
     <string name="Privacy_App_TrustDialog_Title">בטח ביישום זה</string>
     <string name="Privacy_App_TrustDialog_Content">MIUI לא יבקש אישורי הבטחה עבור פעולות אבטחה ופרטיות שיישום זה יבצע.</string>
+    <string name="SysOpt_Boost_Boot">Boot</string>
+    <string name="SysOpt_Boost_Receiver">Background</string>
+    <string name="SysOpt_Boost_AutoStart_Group">Autostart</string>
+    <string name="SysOpt_Boost_AutoStart">Autostart permission</string>
     <string name="Su_Enable_Dialog">%1$s מנסה להשיג הרשאת ROOT כאשר זה לא זמין כברירת מחדל כדי לאבטח את המערכת. אם אתה צריך לאפשר את זה גש אל הגדרות מנהל ההרשאות.</string>
+    <string name="HIPS_Perm_Title">Permissions</string>
     <string name="HIPS_Perm_Network">אינטרנט</string>
     <string name="HIPS_Perm_Network_Desc">אינטרנט</string>
     <string name="HIPS_Perm_Network_Hint">%1$s יישומים מורשים לגשת לאינטרנט</string>
