--- a/miui/src/packages/decompiled_apps/LBESEC_MIUI.apk/res/values-pl/strings.xml
+++ b/miui/src/packages/decompiled_apps/LBESEC_MIUI.apk/res/values-pl/strings.xml
@@ -156,7 +156,7 @@
     <string name="Dashboard_Perm_HIPS_Disabled">Monitor uprawnień wyłączony</string>
     <string name="Dashboard_Perm_HIPS_Risky">Szczególne uprawnienia (%1$d)</string>
     <string name="Dashboard_Perm_HIPS_Safe">Normalne uprawnienia (%1$d)</string>
-    <string name="Dashboard_Perm_AutoStart_Switch">Menedżer Autostartu</string>
+    <string name="Dashboard_Perm_AutoStart_Switch">Menadżer Autostartu</string>
     <string name="Dashboard_Perm_AutoStart">Autostart</string>
     <string name="Dashboard_Perm_AutoStart_Desc">Włącz lub wyłącz autostart aplikacji</string>
     <string name="Dashboard_HIPS_Disable_Title">Monitor uprawnień</string>
