--- a/miui/src/packages/decompiled_apps/LBESEC_MIUI.apk/res/values-sk/strings.xml
+++ b/miui/src/packages/decompiled_apps/LBESEC_MIUI.apk/res/values-sk/strings.xml
@@ -142,9 +142,9 @@
     <string name="Dashboard_Perm_Header">Sledovanie %1$d aplikácií</string>
     <string name="Dashboard_Perm_Header_Disabled">Sledovanie práv je vypnuté</string>
     <string name="Dashboard_Perm_SU_Switch">Práva ROOT</string>
-    <string name="Dashboard_Perm_SU">Spravovať práva ROOT</string>
+    <string name="Dashboard_Perm_SU">Povoliť práva ROOT</string>
     <string name="Dashboard_Perm_SU_Desc">Sledovanie %1$d aplikácií s právami ROOT</string>
-    <string name="Dashboard_Perm_SU_Disabled">Príva ROOT su zakázané</string>
+    <string name="Dashboard_Perm_SU_Disabled">Práva ROOT sú zakázané</string>
     <string name="Dashboard_Perm_SU_Disabled_In_Stable">ROOT nieje dostupný v Stabilnej verzii MIUI</string>
     <string name="Dashboard_Perm_SU_Disabled_In_Stable_Desc">Povolenie práv ROOT aplikáciám tretích strán môže spôsobiť nestabilitu systému, stratu Vašich osobných dát alebo poškodenie telefónu. Pre povolenie ROOT prejdite na vývojársku verziu MIUI.</string>
     <string name="Dashboard_Perm_SU_Disabled_In_Stable_Download">Stiahnuť MIUI</string>
