--- a/miui/src/packages/decompiled_apps/LBESEC_MIUI.apk/res/values-pt-rBR/strings.xml
+++ b/miui/src/packages/decompiled_apps/LBESEC_MIUI.apk/res/values-pt-rBR/strings.xml
@@ -85,7 +85,6 @@
     <string name="HIPS_Perm_CallLog_Hint">%1$s apps tem permissão para acessar seu registro de chamadas</string>
     <string name="HIPS_Perm_ROOT">Acesso root</string>
     <string name="HIPS_Perm_ROOT_Desc">Receber permissões root para acesso ao dispositivo</string>
-    <string name="HIPS_Perm_ROOT_Desc_Stable">Indisponível na MIUI Estável</string>
     <string name="HIPS_Perm_ROOT_Hint">%1$s apps tem permissão para receber acesso root ao dispositivo</string>
     <string name="HIPS_Perm_SendSMS_Recipient">Remetente:</string>
     <string name="HIPS_Perm_SendSMS_Content">Conteúdo:</string>
@@ -127,15 +126,6 @@
     <string name="HIPS_SecurityPrompt_Remember">Lembrar opção</string>
     <string name="HIPS_SecurityPrompt_Accept">Permitido (%d)</string>
     <string name="HIPS_SecurityPrompt_Reject">Negado (%d)</string>
-    <string name="HIPS_SecurityPrompt_AcceptRoot">Permitir</string>
-    <string name="HIPS_SecurityPrompt_Next">Próximo</string>
-    <string name="HIPS_SecurityPrompt_ROOT_Caption">Aviso Importante</string>
-    <string name="HIPS_SecurityPrompt_ROOT_Step1">Você deseja permitir que %1$s receba permissões ROOT?</string>
-    <string name="HIPS_SecurityPrompt_ROOT_Step2">Permissões ROOT podem causar instabilidade no sistema</string>
-    <string name="HIPS_SecurityPrompt_ROOT_Step3">Seus dados pessoais, como contatos, mensagens e outros dados podem ser comprometidos</string>
-    <string name="HIPS_SecurityPrompt_ROOT_Step4">Falha de hardware permanente também é possível</string>
-    <string name="HIPS_SecurityPrompt_ROOT_Step5">Utilize com cautela!</string>
-    <string name="HIPS_SecurityPrompt_ROOT_Step6">Você tem certeza que deseja permitir permissões ROOT para %1$s?</string>
     <string name="Dashboard_Perm">Permissões</string>
     <string name="Dashboard_App">Apps</string>
     <string name="Dashboard_Log">Logs</string>
@@ -145,22 +135,13 @@
     <string name="Dashboard_Perm_SU">Gerenciar permissões root</string>
     <string name="Dashboard_Perm_SU_Desc">Monitorando %1$d apps com permissões de root</string>
     <string name="Dashboard_Perm_SU_Disabled">Permissões de root desativadas</string>
-    <string name="Dashboard_Perm_SU_Disabled_In_Stable">O acesso ROOT não está disponível na MIUI Estável</string>
-    <string name="Dashboard_Perm_SU_Disabled_In_Stable_Desc">"Permitir o acesso ROOT a aplicativos de terceiros pode causar instabilidades no sistema, perda de dados pessoais ou até mesmo falha de hardware..
-
-Por favor troque sua ROM para uma versão de desenvolvimento para ativar as permissões ROOT."</string>
-    <string name="Dashboard_Perm_SU_Disabled_In_Stable_Download">Download MIUI</string>
-    <string name="Dashboard_Perm_SU_Disabled_In_Stable_URL">http://miuibrasil.net</string>
     <string name="Dashboard_Perm_HIPS_Switch">Monitor de Permissões</string>
-    <string name="Dashboard_Perm_HIPS">Gerenciar permissões de apps</string>
-    <string name="Dashboard_Perm_HIPS_Desc">Monitorando %1$d aplicativo(s)</string>
-    <string name="Dashboard_Perm_HIPS_Desc2">Monitorando %1$d aplicativo(s)</string>
+    <string name="Dashboard_Perm_HIPS">Gerenciar Permissões de Apps</string>
+    <string name="Dashboard_Perm_HIPS_Desc">Monitorando %1$d apps para segurança e privacidade</string>
+    <string name="Dashboard_Perm_HIPS_Desc2">Monitorando %1$d apps para segurança e privacidade</string>
     <string name="Dashboard_Perm_HIPS_Disabled">Monitor de permissões desativado</string>
     <string name="Dashboard_Perm_HIPS_Risky">Permissões importantes (%1$d)</string>
     <string name="Dashboard_Perm_HIPS_Safe">Permissões normais (%1$d)</string>
-    <string name="Dashboard_Perm_AutoStart_Switch">Início Automático de aplicativos</string>
-    <string name="Dashboard_Perm_AutoStart">Gerenciar início automático</string>
-    <string name="Dashboard_Perm_AutoStart_Desc">Ativar ou desativar o início automático de aplicativos</string>
     <string name="Dashboard_HIPS_Disable_Title">Monitor de Permissões</string>
     <string name="Dashboard_HIPS_Disable_Content">"Ao desativar o monitor você fará com que a MIUI pare de monitorar requisições de aplicativos, não mais protegendo sua segurança e privacidade.
 Deseja realmente desativá-lo?"</string>
@@ -171,7 +152,7 @@ Nota: Apps com este tipo de permissão podem causar instabilidade do sistema, pe
     <string name="Dashboard_Log_Clear_Content">Todos os logs serão apagados. Deseja realmente ativá-lo?</string>
     <string name="Privacy_Perm_Count">Permitido: %1$d Negado: %2$d</string>
     <string name="Privacy_AppPerm_Count">%1$d permissões</string>
-    <string name="Privacy_AppPerm_Count_Trust">%1$d permissões - &lt;font color=#478800>Confiável&lt;/font></string>
+    <string name="Privacy_AppPerm_Count_Trust">%1$dpermissões - &lt;font color=#478800>Confiável&lt;/font></string>
     <string name="Privacy_App_Trust">Eu confio neste app</string>
     <string name="Privacy_App_Trust_Summary_Off">A MIUI irá monitorar este App</string>
     <string name="Privacy_App_Trust_Summary_On">A MIUI irá confiar neste App</string>
@@ -183,9 +164,5 @@ Nota: Apps com este tipo de permissão podem causar instabilidade do sistema, pe
     <string name="Privacy_App_Launch">Executar</string>
     <string name="Privacy_App_TrustDialog_Title">Confiar neste App</string>
     <string name="Privacy_App_TrustDialog_Content">A MIUI não irá solicitar confirmação de nenhum tipo de recurso que solicite permissões de segurança e privacidade deste aplicativo.</string>
-    <string name="SysOpt_Boost_Boot">Boot</string>
-    <string name="SysOpt_Boost_Receiver">Segundo plano</string>
-    <string name="SysOpt_Boost_AutoStart_Group">Início Automático</string>
-    <string name="SysOpt_Boost_AutoStart">Permissão de início automático</string>
     <string name="Su_Enable_Dialog">%1$s está tentando obter permissões root, o que é desativado por padrão no sistema. Se você desejar ativá-lo, acesse as configurações do Gerenciador de Permissões.</string>
 </resources>
